RELEASE 0.99.5:

    NEW FEATURES:

    * expression_profiles() method plots the expression profiles of individual
samples series, as opposed to grouped samples series handled by 
expression_plot functions.

    UPDATED FEATURES:
    
    * VennDiagram can print to screen, if filename argument is set to NULL 
(Default).

    * heatmap_GO, cluter_GO and plot_design can resize title font and wrap the
text on several lines.

    * expression_plot and expression_plot_symbol can orient X axis labels at
a given angle.

    GENERAL UPDATES:

    * User's Guide updated.

    * List of contributors updated in User's Guide and DESCRIPTION.


RELEASE 0.99.4:

    UPDATED FEATURES:
    
    * Use of ExpressionSet instead of numeric named matrix and
    AnnotatedDataFrame. Better consistency with other Bioconductor packages.

    GENERAL UPDATES:

    * Implemented corrections requested following the Bioconductor review.
    Includes typos, consistent terminology through the package code and
    metafiles, additional information in help files, no reference to GitHub as
    an alternate installation option, use of arrow signs instead of equal signs
    for value assignment.
    
    * Restricted lines to 80 characters, and used 4-space tabulations.

    * Corrected out-of-date documentation.


RELEASE 0.99.3:

    UPDATED FEATURES:
    
    * Control the size of the legend text in the two expression plot figures.
    Updated help files accordingly.
    
    * Updated vignette with new section "Statistics".
    
    * Complete cleaning of code files for lines shorter than 80 columns.
    
    * Cleanup of help files for lines shorter than 80 columns.
    
    * Enabled filtering of raw results on the average score of a GO term.

RELEASE 0.99.2:

    UPDATED FEATURES:
    
    * Metadata lines in the preamble of the Sweave file


RELEASE 0.99.1:

    UPDATED FEATURES:
    
    * Sweave vignette implemented.
    
    * Replaced all message() statements by cat() to make Sweave